# GPU_Wrinkle_Deformer

./: README.md  buildConstraints.py  cfx_wrap-3.7.0.hda  deltamush.py  wrap_deformer_total.py  wrinkle_deformer.hip  wrinkle_deformer.py  wrinkle_temp.py
Assets/: bend_constraints.txt  changename.py
GPU_IPC_Deformer/: CMakeLists.txt
GPU_IPC_Deformer/src/: gl_main.cpp
GPU_IPC_Deformer/src/DEFORMER/: Deformer.cpp  Deformer.cu  Deformer.cuh  Deformer.hpp  WrapDeformer.cu  WrapDeformer.cuh  WrinkleDeformer.cu  WrinkleDeformer.cuh
GPU_IPC_Deformer/src/FEMENERGY/: ElasticRod.cuh  ThinShell.cuh
GPU_IPC_Deformer/src/FRONTEND/: HTTPServer.cpp  HTTPServer.hpp  OpenGLApp.cpp  OpenGLApp.hpp  SimulationContext.cpp  SimulationContext.hpp  Simulator.cpp  Simulator.hpp
GPU_IPC_Deformer/src/GPUIPC/: ACCD.cu  FEMEnergy.cu  FEMEnergy.cuh  GIPC.cu  GIPC.cuh  GIPCFricUtils.cu  GIPCFricUtils.cuh  GIPCFriction.cu  GIPCFriction.cuh  GIPC_PDerivative.cuh  LBVH.cu  LBVH.cuh  SortMesh.cu  SortMesh.cuh
GPU_IPC_Deformer/src/LSOLVER/: BlockHessian.cu  BlockHessian.cuh  ImplicitIntegrator.cu  ImplicitIntegrator.cuh  MASPreconditioner.cu  MASPreconditioner.cuh  PCGSolver.cu  PCGSolver.cuh
GPU_IPC_Deformer/src/UTILS/: CUDAUtils.hpp  GeometryManager.cpp  GeometryManager.hpp  LoadMesh.cpp  LoadMesh.hpp  MathUtils.cu  MathUtils.cuh  RenderUtils.hpp
